mdmCeneveo/src/objects/Estimate_Request__c.object
<CustomObject>
    <fields>
        <fullName>AccountNum__c</fullName>
        <formula>Account__r.Billing_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Account for this Estimate Request</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Estimate_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acct_Inv_Desc_1__c</fullName>
        <label>Acct Inv Desc 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Inv_Desc_2__c</fullName>
        <label>Acct Inv Desc 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Inv_Desc_3__c</fullName>
        <label>Acct Inv Desc 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acct_Inv_Price_1__c</fullName>
        <label>Acct Inv Price 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acct_Inv_Price_2__c</fullName>
        <label>Acct Inv Price 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acct_Inv_Price_3__c</fullName>
        <label>Acct Inv Price 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acct_Inv_Total__c</fullName>
        <formula>Acct_Inv_Price_1__c +  Acct_Inv_Price_2__c +  Acct_Inv_Price_3__c +  Acct_Inv_Price_4__c +  Acct_Inv_Price_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acct Inv Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acct_Name__c</fullName>
        <externalId>true</externalId>
        <label>Acct Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>Qty per roll, # per Case, etc.</description>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Adhesive_Type__c</fullName>
        <label>Adhesive Type</label>
        <picklist>
            <picklistValues>
                <fullName>All Temperature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Tack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opaque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Removable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repositionable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freezer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adhesive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adhesive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Usage__c</fullName>
        <label>Annual Usage</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Method__c</fullName>
        <label>Application Method</label>
        <picklist>
            <picklistValues>
                <fullName>Hand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine/Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine/New</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Surface__c</fullName>
        <label>Application Surface</label>
        <picklist>
            <picklistValues>
                <fullName>Corrugated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Window</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Process_Notification__c</fullName>
        <label>Approval Process Notification</label>
        <picklist>
            <picklistValues>
                <fullName>L&amp;P Estimating Approval Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;P Management Approval Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP 1 Estimating Approval Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CP 2 Estimating Approval Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Art_in_Date__c</fullName>
        <label>Art files</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if label will be Auto Applied</inlineHelpText>
        <label>Auto Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Back__c</fullName>
        <defaultValue>&quot;TBD&quot;</defaultValue>
        <label>Back Roll Wind</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beat_Date_Expectation_by__c</fullName>
        <formula>Returned_Date__c  - Need_by_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Beat Date Expectation by</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bind__c</fullName>
        <label>Bind</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bindery__c</fullName>
        <label>Bindery</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bleeds__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bleeds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Board_Type__c</fullName>
        <label>Board Type</label>
        <picklist>
            <picklistValues>
                <fullName>SBS C1S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBS C2S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buried_Add_On_Qty_2__c</fullName>
        <label>Buried Add-On Qty 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buried_Add_On_Qty_3__c</fullName>
        <label>Buried Add-On Qty 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buried_Add_On_Qty_4__c</fullName>
        <label>Buried Add-On Qty 4</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buried_Add_in__c</fullName>
        <description>Additional Add on Costs that will be added to the total price</description>
        <label>Buried Add-On Qty 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bus_Unit__c</fullName>
        <defaultValue>IF($RecordType.Name = &quot;CP - RFE 3 Components&quot;,&quot;Commercial Print&quot;, 
IF ($RecordType.Name = &quot;CP - RFE Short Form&quot;, &quot;Commercial Print&quot;,
IF ($RecordType.Name = &quot;Commercial Print&quot;, &quot;Commercial Print&quot;,
IF ($RecordType.Name = &quot;Custom Label Estimate&quot;, &quot;Labels&quot;,
IF ($RecordType.Name = &quot;Nashua Coated Estimate&quot;, &quot;Nashua&quot;, 
IF ($RecordType.Name = &quot;POS Estimate&quot;, &quot;Nashua&quot;, 
IF ($RecordType.Name = &quot;Packaging Estimate&quot;, &quot;Packaging&quot;,
IF ($RecordType.Name = &quot;Rx Label&quot;, &quot;Labels&quot;,
IF ($RecordType.Name = &quot;Sleeve Estimate&quot;, &quot;Packaging&quot;, 
IF ($RecordType.Name = &quot;Nashua/Rx Label Estimate&quot;, &quot;Nashua&quot;,
IF ($RecordType.Name = &quot;Default Estimate&quot;, &quot;Packaging&quot;,
NULL)))))))))))</defaultValue>
        <description>Calculated field to capture the Business Unit that the RFE is being created for.</description>
        <externalId>true</externalId>
        <label>Bus Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Name of Business Unit</description>
        <inlineHelpText>Select the Business Unit that this Estimate is related to.</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua Coated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shrink Sleeve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CP_Magin_Estimation_2__c</fullName>
        <formula>IF(Cost_2__c &gt;0,
(
(Sales_Price_Estimation_2__c  -  Cost_2__c -  Buried_Add_in__c )  / (Cost_2__c)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Margin Estimation 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CP_Margin_Estimation_3__c</fullName>
        <formula>IF(Cost_3__c &gt;0,
(
(Sales_Price_Estimation_3__c  -  Cost_3__c -  Buried_Add_in__c )  / (Cost_3__c)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Margin Estimation 3</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CP_Margin_Estimation_4__c</fullName>
        <formula>IF(Cost_4__c &gt;0,
(
(Sales_Price_Estimation_4__c  -  Cost_4__c -  Buried_Add_in__c )  / (Cost_4__c)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Margin Estimation 4</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CP_Margin_Estimation_5__c</fullName>
        <formula>IF(Cost_5__c &gt;0,
(
(Sales_Price_Estimation_5__c  -  Cost_5__c -  Buried_Add_in__c )  / (Cost_5__c)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Margin Estimation 5</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CP_Margin_Estimation__c</fullName>
        <formula>IF(Cost_1__c &gt;0,
(
(Sales_Price_Estimation_1__c  -  Cost_1__c -  Buried_Add_in__c )  / (Cost_1__c)
),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Margin Estimation1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CP_Margin_QTY1__c</fullName>
        <formula>IF ( Margin_CP_All__c  = 0,  Cost_1__c  * Margin_Qty_1__c, Margin_CP_All__c  *  Cost_1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Margin - QTY1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Margin_QTY2__c</fullName>
        <formula>IF ( Margin_CP_All__c =0,Cost_2__c  *  Margin_Qty_2__c, Margin_CP_All__c  *   Cost_2__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Margin - QTY2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Margin_QTY3__c</fullName>
        <formula>IF ( Margin_CP_All__c  = 0,Cost_3__c  *  Margin_Qty_3__c, Margin_CP_All__c  *  Cost_3__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Margin - QTY3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Sell_Price_QTY_1__c</fullName>
        <formula>Cost_1__c   +   CP_Margin_QTY1__c + Buried_Add_in__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Sell Price - QTY 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Sell_Price_QTY_2__c</fullName>
        <formula>Cost_2__c  +  CP_Margin_QTY2__c +  Buried_Add_On_Qty_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Sell Price - QTY 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP_Sell_Price_QTY_3__c</fullName>
        <formula>Cost_3__c   +  CP_Margin_QTY3__c  +   Buried_Add_On_Qty_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Sell Price - QTY 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSPIA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are any products on this request designed or intended for children under 12?</inlineHelpText>
        <label>CSPIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Caliper__c</fullName>
        <label>Caliper</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Pack__c</fullName>
        <label>Case Pack</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cold_Foil__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cold Foil</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Description_2__c</fullName>
        <label>Component Description 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Description_3__c</fullName>
        <label>Component Description 3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Description_4__c</fullName>
        <label>Component Description 4</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Description__c</fullName>
        <inlineHelpText>If you have a component - then a description is required. Else none of the paper, ink etc will print on the output documents.</inlineHelpText>
        <label>Component Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consecutive_Numbering__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if label needs to be consecutively numbered</inlineHelpText>
        <label>Consecutive Numbering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Email</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Estimates (Contact Email)</relationshipLabel>
        <relationshipName>Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account Contact for this Estimate.</description>
        <inlineHelpText>Enter the Contact for this Estimate.</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Estimate_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Color__c</fullName>
        <label>Container Color</label>
        <picklist>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Container_Type__c</fullName>
        <label>Container Type</label>
        <picklist>
            <picklistValues>
                <fullName>Glass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Core_ID_Label__c</fullName>
        <label>Core ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_ID_POS__c</fullName>
        <label>Core ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_OD__c</fullName>
        <label>Core OD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Type__c</fullName>
        <label>Core Type</label>
        <picklist>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiber</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corner_Radius__c</fullName>
        <inlineHelpText>Standard Corner Radius is 0.125</inlineHelpText>
        <label>Corner Radius</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_10__c</fullName>
        <label>Cost 10</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_1__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost 1</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_2__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost 2</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Costs__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this box if Manufacturing Costs are provided (as opposed to Sell Prices)</inlineHelpText>
        <label>Mfg Costs Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Crossovers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Crossovers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Previous_Item_Number__c</fullName>
        <label>Current/Previous Item Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Samples__c</fullName>
        <label>Customer Samples</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cut_Height__c</fullName>
        <label>Cut Height</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Changes__c</fullName>
        <label>Description Changes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Special_Shape__c</fullName>
        <inlineHelpText>Enter a description of the shape if &quot;Special&quot; is selected</inlineHelpText>
        <label>Description of Special Shape</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Number__c</fullName>
        <label>Design Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Die_Cut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Die Cut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Die_Tooling_Charge__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter the total amount for Die Tooling Charges</inlineHelpText>
        <label>Die Tooling Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_File_Setup_2__c</fullName>
        <label>Digital File Setup 2</label>
        <picklist>
            <picklistValues>
                <fullName>VDP/ Covers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDP / Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_File_Setup_3__c</fullName>
        <label>Digital File Setup 3</label>
        <picklist>
            <picklistValues>
                <fullName>VDP / Covers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDP / Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_File_Setup_4__c</fullName>
        <label>Digital File Setup 4</label>
        <picklist>
            <picklistValues>
                <fullName>VDP / Covers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDP/ Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_File_Setup__c</fullName>
        <label>Digital File Setup</label>
        <picklist>
            <picklistValues>
                <fullName>VDP / Covers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDP / Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Static</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Notes_2__c</fullName>
        <label>Notes 2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Notes_3__c</fullName>
        <label>Notes 3</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Notes_4__c</fullName>
        <label>Notes 4</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Notes__c</fullName>
        <label>Notes</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Date__c</fullName>
        <label>Drop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dummy_Delivered_To__c</fullName>
        <label>Dummy Delivered To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dummy_Request_Notes__c</fullName>
        <label>Dummy Request Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Edge_Trim_FF__c</fullName>
        <defaultValue>0.0625</defaultValue>
        <inlineHelpText>Enter the Edge Trim for Fanfold Items</inlineHelpText>
        <label>Edge Trim (FF)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emboss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emboss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Need_by_date__c</fullName>
        <label>Est Need by date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Estimate_Number__c</fullName>
        <inlineHelpText>Enter the Estimate Number from the estimating system</inlineHelpText>
        <label>Estimate Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimate_Type__c</fullName>
        <description>Type of Estimate</description>
        <inlineHelpText>Select the appropriate estimate type.</inlineHelpText>
        <label>Estimate Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Customer - Existing Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer - New Item</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer - New Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimate__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>New Estimate #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Estimated_Artwork_Charges__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter the total $ amount for Artwork Charges</inlineHelpText>
        <label>Estimated Artwork Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Due_Date__c</fullName>
        <label>Estimated Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimating_Approval__c</fullName>
        <label>Estimating Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimating_Notes__c</fullName>
        <label>Estimating Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Estimator</description>
        <inlineHelpText>Select the Estimator to work this request.</inlineHelpText>
        <label>Estimator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Estimate_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FOB_Point__c</fullName>
        <inlineHelpText>Please enter the FOB Point.
FOB Origin - Ownership title transfers when product is shipped 
FOB Destination - Ownership title transfers when delivered</inlineHelpText>
        <label>FOB Point</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Face_Roll_Wind__c</fullName>
        <defaultValue>&quot;TBD&quot;</defaultValue>
        <label>Face Roll Wind</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Approval__c</fullName>
        <label>Finance Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Finished_Size__c</fullName>
        <label>Finished Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finishing_Pack__c</fullName>
        <label>Finishing</label>
        <picklist>
            <picklistValues>
                <fullName>Glued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Window</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Tag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peel &amp; Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-moist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zip Strip Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nylon Strip Application</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Finishing_Packagain__c</fullName>
        <label>Finishing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finishing_Shrink__c</fullName>
        <label>Finishing</label>
        <picklist>
            <picklistValues>
                <fullName>Pieces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 MTR Rolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>750 MTR Rolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900 MTR Rolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000 MTR Rolls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flat_Size__c</fullName>
        <label>Flat Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flexo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flexo</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>